
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-05-09 DP  1.8.0  Load second and subsequent postgresql.conf files
                      into the config editor correctly.
2007-05-09 DP  1.8.0  Prompt the user to save changes before opening a file
                      from the recent files menu on the Query Tool, per Taras 
                      Kopets
2007-05-02 DP  1.8.0  Add auto-indent to the query tool.
2007-05-02 DP  1.8.0  Add an option to show indent guides in the query tool.
2007-05-02 DP  1.8.0  Allow spaces to be used instead of tabs in SQL editors,
                      and ensure the width can be set sensibly.
2007-04-30 DP  1.8.0  Allow detection and conversion of line ending format in
                      the query tool.
2007-04-24 DP  1.8.0  Integrate the EnterpriseDB pl/pgsql and EDB-SPL debugger
                      with pgAdmin [Hiroshi Saito, Dave Page]
2007-04-23 DP  1.8.0  Don't try to detect if integrated autovacuum is
                      running on < 8.1. Per Simon Riggs.
2007-04-04 DP  1.8.0  Display the constraint OID for index constraints, not
                      the index OID. Add the index OID as a new property,
                      per Harald.
2007-04-04 DP  1.8.0  Ensure the password change dialog works with stored
                      passwords.
2007-04-03 DP  1.8.0  Add support for function cost and row estimations in
                      PostgreSQL 8.3+.
2007-04-03 DP  1.8.0  Add support for enums in PostgreSQL 8.3+.
2007-04-03 DP  1.8.0  Copy and paste data correctly when in a cell editor in
                      the edit grid, per Stephan Jaensch.
2007-03-30 DP  1.6.4  Avoid creating graphical explain nodes for triggers as