@@ -35,6 +35,11 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2007-05-09 DP  1.8.0  Treat view columns as first class citizens. Show them on 
+                      the treeview, and allow their properties page to be
+                      viewed. Allow editting of the default value and comment,
+                      and reflect this in the reverse engineered SQL for the
+                      view. Per request from Luiz.
 2007-05-09 DP  1.8.0  Load second and subsequent postgresql.conf files
                       into the config editor correctly.
 2007-05-09 DP  1.8.0  Prompt the user to save changes before opening a file
